--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
    "type": "commonjs",
    "devDependencies": {
       "@types/bcryptjs": "^2.4.6",
+      "@types/cookie-parser": "^1.4.6",
       "@types/jsonwebtoken": "^9.0.5",
       "@types/morgan": "^1.9.9",
       "@types/node": "^16.11.10",
@@ -14,6 +15,7 @@
    "dependencies": {
       "apollo-server-express": "^3.13.0",
       "bcryptjs": "^2.4.3",
+      "cookie-parser": "^1.4.6",
       "cors": "^2.8.5",
       "dotenv": "^16.3.1",
       "express": "^4.18.2",
