--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.2.18",
     "dayjs": "^1.11.10",
     "graphql": "^16.8.1",
+    "jose": "^5.1.3",
     "jwt-decode": "^4.0.0",
     "local-storage-fallback": "^4.1.2",
     "react": "^18.2.0",
