--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "jose": "^5.1.3",
     "jwt-decode": "^4.0.0",
     "local-storage-fallback": "^4.1.2",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
@@ -59,6 +60,9 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "dotenv": "^16.3.1",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
