--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "apollo-link-token-refresh": "^0.6.1",
     "dayjs": "^1.11.10",
     "graphql": "^16.8.1",
     "jose": "^5.1.3",
